# website_builder_exemple

./: .gitignore  Cargo.toml  Makefile.toml  README.md  askama.toml  docker-compose.yaml  package-lock.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: alpine@3.14.1.min.js  htmx.min.js
src/: app.rs  error.rs  i18n.rs  lib.rs  main.rs
src/config/: tracing.rs
src/i18n/: mod.rs  translation.rs
src/model/: mod.rs
src/state/: mod.rs
src/view/home/: home.html  mod.rs
src/view/root/: mod.rs  root.html
src/view_controller/: mod.rs
src/view_controller/home/: home.html  mod.rs
src/view_controller/root/: mod.rs  root.html
tests/: integration_app_test.rs
tests/common/: mod.rs
