[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = "0.7.5"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }


opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.25.0", features = ["metrics"] }
tracing-subscriber = "0.3.18"
opentelemetry-semantic-conventions = "0.16.0"

# sqlx = { version = "0.8.1", features = [
#   "runtime-tokio-rustls",
#   "any",
#   "postgres",
#   "macros",
# ] }
tower-http = { version = "0.5.2", features = ["fs"] }
sqlx = { git = "https://github.com/launchbadge/sqlx", features = [
  "runtime-tokio-rustls",
  "postgres",
] }

[dev-dependencies]
axum-test = { version = "15.5.3" }
ctor = "0.2.8"
testcontainers = { version = "0.21.1" }
