[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
askama = "0.12.1"
axum = "0.7.5"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.25.0", features = ["metrics"] }
tracing-subscriber = "0.3.18"
opentelemetry-semantic-conventions = "0.16.0"
tower-http = { version = "0.5.2", features = ["fs"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
axum-test = { version = "15.7.1" }
ctor = "0.2.8"
testcontainers = { version = "0.21.1" }
once_cell = "1.19.0"
